:construction: Fix overflow/scroll of d2h diff viewer

--- a/frontend/src/app/modules/visualization/active-conflict-awareness/active-conflict-awareness-diff/active-conflict-awareness-diff.component.scss
+++ b/frontend/src/app/modules/visualization/active-conflict-awareness/active-conflict-awareness-diff/active-conflict-awareness-diff.component.scss
@@ -1,6 +1,11 @@
 @import 'common';
 
 .patch-viewer-container {
-  height: calc(100vh - $actconawa-navbar-height - $actconawa-container-standard-margin - 4em);
   padding: 1em;
+  height: calc(100vh - $actconawa-navbar-height - $actconawa-container-standard-margin - 4em);
+}
+
+.patch-viewer {
+  overflow: auto;
+  height: 100%;
 }
